@@ -1,3 +1,10 @@
+2008-08-05  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/DerefServer.java: Limit validity time	of deref 
+	links by adding/signing a timestamp. The valid time can be configured using 
+	the 'derefserver.validtime' property (default value is 3600s).
+	* projects/core/xsl/master.xsl: Add timestamp to deref link and signing.
+
 2007-09-19  Martin Leidig  <mleidig@schlund.de>
 
 	* projects/core/script/webservice.js: allow Null values for
